style.css
@import "assets/fonts/fonts2.css";

*{
    margin: 0px;    
    font-family: "Lato";
}

.wrapper {
    width: 1020px;
    margin: 0 auto;
}

.header__wrapper, .slider__wrapper{
    padding: 0px 40px;
    box-sizing: border-box;
    display: flex;
    justify-content: space-between;
}

.header {
    height: 89px;
    background-color: #2d303a;
    border-bottom: 6px solid #323746;
    display: flex;
    justify-content: space-between;
}

.header__logo {
    font-size: 25px;
    font-weight: 700;
    color: #ffffff;
    text-transform: uppercase;
    letter-spacing: -0.7px;
    margin: 28px 0px 0px 0px;
}
  
  .header__logo::after {
    content: "*";
    color: #f06c64;
}

.header__navigation {
  padding-top: 44px;
}

.navigation {
    display: flex;
    justify-content: space-between;
    list-style: none;
    font-size: 12px;
    line-height: 12px;
    font-weight: 700;
    width: 371px;
}

.navigation__text {
    position: relative;
    height: 30px;
}

.navigation__text a {
    color: #ffffff;
    text-decoration: none;
    text-transform: uppercase;
    display: block;
    height: 100%;
}

.navigation__text:not(:first-child)::before {
    content: ".";
    color:#494e62;
    position: absolute;
    left: -16px;
    top: -2px;
}

.navigation__text a:hover {
  color: #f06c64;
}

.slider {
  height: 594px;
  background-color: #f06c64;
  border-bottom: 6px solid #ea676b;
}

.container {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-content: center;
  justify-content: space-between;
}

.arrow-block {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.slider__button {
  position: absolute;
  padding: 281px 0px 0px 0px;
}

.arrow-block__arrow{
  background: url("assets/img/chev.png") no-repeat;
  width: 16px;
  height: 27px;
  border: none;
  cursor: pointer;
  margin: 0px 0px 0px 2px;
}

.arrow-block__arrow_rotate {
  transform: rotate(180deg);
}

.arrow-block__arrow:hover {
  transform: scale(2);
  background-color: grey;
  border-radius: 3px;
}

.arrow-block__arrow_rotate:hover {
  transform: scale(2) rotate(180deg);
}

.slider__phone-vertical {
  margin: 53px 0px 0px 72px;
}
.slider__phone-horizontal {
  margin: 174px 71px 0px 0px;
}

.our-services {
  background-color: #f2f2f2;
  border-bottom: 6px solid #ffffff;
}

.our-services__wrapper {
  width: 1020px;
  padding: 0px 40px 30px 40px;
  box-sizing: border-box;
  height: 100%;
  margin: 0 auto;
}

.our-services__title {
  color: #666d89;
  font-weight: 900;
  font-size: 30px;
  line-height: 30px;
  padding-top: 62px;
  letter-spacing: -0.2px;
}

.our-services__text {
  color: #767e9e;
  font-size: 18px;
  font-weight: 300;
  line-height: 30px;
  padding-top: 22px;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: justify;
}

.list {
  display: flex;
  justify-content: space-between;
  list-style: none;
  flex-flow: row wrap;
}

.our-services__list {
    padding: 46px 0px 0px 0px;
}

.list__item {
  padding-bottom : 32px;
}

.item {
  flex: 0 1 300px;
  display: flex;
  align-items: flex-start;
  overflow: hidden;
  text-overflow: ellipsis;
}

.item__paragraph {
  padding-left: 18px;
}

.paragraph__title {
  font-size: 18px;
  line-height: 17px;
  font-weight: 900;
  color: #666d89;
  letter-spacing: -0.1px;
}

.paragraph__text {
  color: #767e9e;
  font-size: 12px;
  font-weight: 400;
  line-height: 21px;
  padding-top: 10px;
  text-align: justify;
}

.portfolio {
    height: 797px;
    background-color: #2d303a;
    border-bottom: 6px solid #323746;
    padding-top: 66px;
}

.portfolio__title {
    font-size: 30px;
    line-height: 17px;
    color: #666d89;
    font-weight: 900;
    margin: 3px 0px 0px 40px;
}

.portfolio__text {
    font-size: 18px;
    line-height: 30px;
    color: #767e9e;
    font-weight: 300;
    margin: 27px 0px 0px 40px;
}

.portfolio__tags {
    margin: 11px 0 0 41px;
}

.tags {
    display: flex;
    padding: 0px;
    margin: 0px;
    list-style: none;
}

.tags__item {
    font-size: 12px;
    line-height: 1;
    color: #767e9e;
    font-weight: 400;
    cursor: pointer;
    border: 1px solid #666d89;
    border-radius: 5px;
    transition: 0.2s;
}

.tags__item_active {
    border: 1px solid #c5c5c5;
    color: #dedede;
}

.tags__item:hover {
    border: 1px solid #c5c5c5;
    color: #dedede;
}

.tags__item:nth-child(1) {
    padding: 4px 6px 4px 7px;
  }
  
.tags__item:nth-child(2) {
    padding: 4px 6px 4px 6px;
    margin-left: 10px;
  }
  
.tags__item:nth-child(3) {
    width: 83px;
    padding: 4px 2px 4px 6px;
    margin-left: 10px;
  }
  
.tags__item:nth-child(4) {
    padding: 4px 4px 4px 5px;
    margin-left: 10px;
  }

.portfolio__table {
    margin: 19px 40px 0 40px;
}

.projects {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 20px;
    overflow: hidden;
}

.projects__link {
    height: 187px;
    margin-bottom: 20px;
}

.about-us {
    background-color: #f2f2f2;
    border-bottom: 6px solid #ffffff;
}

.about-us__wrapper {
    padding: 67px 0 66px 0;
}

.about-us__title {
    font-size: 30px;
    line-height: 18px;
    color: #666d89;
    font-weight: 900;
    margin: 1px 0 0 40px;
}

.about-us__text {
    width: 940px;
    height: 57px;
    font-size: 18px;
    line-height: 30px;
    color: #767e9e;
    font-weight: 300;
    text-align: left;
    margin: 27px 0 0 40px;
    text-align: justify;
}

.three-column-layout {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

.about-us__staff {
    margin: 48px 22px 0 40px;
}

.employee {
    max-width: 301px;
}

.employee__name {
    font-size: 18px;
    color: #666d89;
    font-weight: 900;
    margin: 12px 0 0 0;
    letter-spacing: -0.2px;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.employee__description {
    width: 300px;
    font-size: 12px;
    line-height: 1.7;
    color: #767e9e;
    font-weight: 400;
    margin: 10px 0 0 0;
    text-align: justify;
}

.employee:nth-child(1) .employee__description {
    letter-spacing: -0.06px;
}

.employee__link {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 31px;
    height: 31px;
    border: 1px solid #666d89;
    border-radius: 50%;
    transition: background-color 0.3s, border-color 0.3s;
    transition: filter 0.3s;
}

.social-media {
    display: flex;
}

.employee__contacts {
    margin: 24px auto 0 auto;
}  
 

.employee__link:not(:first-child) {
    margin-left: 7px;
}


button, input, textarea {
  margin: 0;
  font-family: "Lato", "Arial", sans-serif;
}

.wrapper {
    max-width: 1020px;
    margin: 0 auto;
}

.get-a-quote {
    background-color: #f06c64;
    border-bottom: 6px solid #ea676b;
}

.get-a-quote__wrapper {
    padding: 64px 40px 22px 40px;
    box-sizing: border-box;
}

.get-a-quote__title {
    font-size: 30px;
    font-weight: 900;
    line-height: 26px;
    color: #f0d8d9;
    margin: 0;
}

.get-a-quote__text {
    margin-top: 22px;
    font-size: 18px;
    font-weight: 300;
    line-height: 30px;
    color: #f0d8d9;
    text-align: justify;
}

  .get-a-quote__form {
    display: flex;
    margin-top: 44px;
}

.get-a-quote__contact-information {
    display: flex;
    flex-direction: column;
    margin-left: 21px;
}

.form {
    display: flex;
    flex-direction: column;
    min-width: 619px;
}

.form__input {
    padding: 8px 15px 9px 15px;
    font-size: 12px;
    font-weight: 400;
    line-height: 21px;
    color: #f0d8d9;
    background-color: #d6564f;
    border: none;
    border-radius: 5px;
    outline: none;
    transition: background-color 0.3s;
}

.form__input::placeholder {
    color: #f48c8f;
}

.form__input:not(:first-child) {
    margin-top: 16px;
}

.form__input_textarea {
    height: 186px;
    padding-top: 7px;
    resize: none;
}

.form__button {
    width: 80px;
    height: 30px;
    margin-top: 16px;
    font-weight: 700;
    color: #f06c64;
    cursor: pointer;
    background-color: #f0d8d9;
    border: solid 1px;
    border-radius: 5px;
}

.form__button:hover {
    background-color: white;
}

.contact-information__title {
    margin: 0;
    font-size: 18px;
    font-weight: 900;
    line-height: 18px;
    color: #f0d8d9;
    letter-spacing: -0.1px;
}

.contact-information__text {
    margin: 11px 0 0 0;
    text-align: justify;
    letter-spacing: -0.04px;
    font-size: 12px;
    font-weight: 400;
    line-height: 22px;
    color: #f0d8d9;
}

.contact-information__location {
    position: relative;
    margin: 21px 0 0 0;
    padding-left: 23px;
    text-decoration: none;
    font-size: 12px;
    font-weight: 400;
    line-height: 21px;
    color: #f0d8d9;
}

.contact-information__phone {
    position: relative;
    padding-left: 23px;
    text-decoration: none;
    font-size: 12px;
    font-weight: 400;
    line-height: 21px;
    color: #f0d8d9;
}

.contact-information__email {
    position: relative;
    padding-left: 23px;
    text-decoration: none;
    font-size: 12px;
    font-weight: 400;
    line-height: 21px;
    color: #f0d8d9;
    margin-top: 1px;
}

.contact-information__image {
    position: absolute;
}
  
.contact-information__location .contact-information__image {
    top: 5px;
    left: 3px;
}
  
.contact-information__phone .contact-information__image {
    top: 5px;
    left: 1px;
}
  
  .contacts__mail {
    margin-top: 1px;
}
  
.contact-information__email .contact-information__image {
    top: 8px;
    left: 0;
}
  
.contact-information__phone:hover, .contact-information__email:hover {
    text-decoration: underline;
}

.footer {
    background-color: #2d303a;
  }
  
.footer__wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 22px;
    padding-bottom: 21px;
}
  
.footer__copyright {
    margin-bottom: 3px;
    margin-left: 42px;
}
  
.footer__copyright-image {
    margin-right: 39px;
}

.employee__link {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 31px;
    height: 31px;
    border: 1px solid #666d89;
    border-radius: 50%;
    transition: background-color 0.3s, border-color 0.3s;
    transition: filter 0.3s;
}

.employee__link:hover {
    background-color:white;
    color: #2d303a
}
  
.footer__social-media {
    display: flex;
    padding-right: 39px;
}

.employee__link:not(:first-child) {
    margin-left: 7px;
}

.copyright {
    font-size: 12px;
    font-weight: 400;
    line-height: 6px;
    color: #666d89;
    letter-spacing: -0.144px;
  }

